--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-imagem"src="alurastart logo.png" alt="logo da alura start">
+        <img src="imagen.jpeg">
     
         <ul class="cabecalho-lista">
              <li class="cabecalho-lista-item">Escola</li>
             <li class="cabecalho-lista-item">Estudante</li>
         <ul>
     </header>
+
     
 </body>
 </html>
